y.output

state 0
	$accept: .program $end 
	program: .    (2)

	INT  shift 26
	VOID  shift 27
	CONST  shift 25
	CHAR  shift 28
	EXTERN  shift 23
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 7
	ENUM  shift 9
	UNION  shift 8
	TYPEDEF  shift 20
	STATIC  shift 22
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	ATTR_WEAK  shift 17
	ATTR_ALIGNED  shift 19
	ATTR_SECTION  shift 18
	ALIGNAS_SPEC  shift 6
	STATIC_ASSERT  shift 15
	ASM_KW  shift 14
	INLINE_KW  shift 24
	TYPENAME  shift 36
	';'  shift 4
	.  reduce 2 (src line 98)

	program  goto 1
	declaration  goto 3
	var_declaration  goto 5
	declaration_list  goto 2
	struct_declaration  goto 10
	union_declaration  goto 11
	enum_declaration  goto 12
	typedef_declaration  goto 13
	type_specifier  goto 21
	declaration_specifiers  goto 16

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  declaration_list.    (1)
	declaration_list:  declaration_list.declaration 
	declaration_list:  declaration_list.';' 

	INT  shift 26
	VOID  shift 27
	CONST  shift 25
	CHAR  shift 28
	EXTERN  shift 23
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 7
	ENUM  shift 9
	UNION  shift 8
	TYPEDEF  shift 20
	STATIC  shift 22
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	ATTR_WEAK  shift 17
	ATTR_ALIGNED  shift 19
	ATTR_SECTION  shift 18
	ALIGNAS_SPEC  shift 6
	STATIC_ASSERT  shift 15
	ASM_KW  shift 14
	INLINE_KW  shift 24
	TYPENAME  shift 36
	';'  shift 39
	.  reduce 1 (src line 92)

	declaration  goto 38
	var_declaration  goto 5
	struct_declaration  goto 10
	union_declaration  goto 11
	enum_declaration  goto 12
	typedef_declaration  goto 13
	type_specifier  goto 21
	declaration_specifiers  goto 16

state 3
	declaration_list:  declaration.    (5)

	.  reduce 5 (src line 107)


state 4
	declaration_list:  ';'.    (6)

	.  reduce 6 (src line 109)


state 5
	declaration:  var_declaration.    (7)

	.  reduce 7 (src line 113)


state 6
	declaration:  ALIGNAS_SPEC.var_declaration 

	INT  shift 26
	VOID  shift 27
	CONST  shift 25
	CHAR  shift 28
	EXTERN  shift 23
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 42
	ENUM  shift 44
	UNION  shift 43
	STATIC  shift 22
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	INLINE_KW  shift 24
	TYPENAME  shift 36
	.  error

	var_declaration  goto 40
	type_specifier  goto 21
	declaration_specifiers  goto 41

state 7
	declaration:  STRUCT.ID ';' 
	type_specifier:  STRUCT.ID 
	struct_declaration:  STRUCT.ID '{' field_list '}' ';' 
	struct_declaration:  STRUCT.ATTR_PACKED ID '{' field_list '}' ';' 
	struct_declaration:  STRUCT.ID ATTR_PACKED '{' field_list '}' ';' 
	struct_declaration:  STRUCT.ID '{' field_list '}' ATTR_PACKED ';' 
	struct_declaration:  STRUCT.ATTR_ALIGNED ID '{' field_list '}' ';' 
	struct_declaration:  STRUCT.ID ATTR_ALIGNED '{' field_list '}' ';' 
	declaration_specifiers:  STRUCT.ID '{' field_list '}' 
	declaration_specifiers:  STRUCT.ATTR_PACKED ID '{' field_list '}' 
	declaration_specifiers:  STRUCT.ID ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  STRUCT.ID '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  STRUCT.'{' field_list '}' 
	declaration_specifiers:  STRUCT.ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  STRUCT.'{' field_list '}' ATTR_PACKED 

	ID  shift 45
	ATTR_PACKED  shift 46
	ATTR_ALIGNED  shift 47
	'{'  shift 48
	.  error


state 8
	declaration:  UNION.ID ';' 
	type_specifier:  UNION.ID 
	union_declaration:  UNION.ID '{' field_list '}' ';' 
	union_declaration:  UNION.ATTR_PACKED ID '{' field_list '}' ';' 
	union_declaration:  UNION.ID ATTR_PACKED '{' field_list '}' ';' 
	union_declaration:  UNION.ID '{' field_list '}' ATTR_PACKED ';' 
	declaration_specifiers:  UNION.'{' field_list '}' 
	declaration_specifiers:  UNION.ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  UNION.'{' field_list '}' ATTR_PACKED 

	ID  shift 49
	ATTR_PACKED  shift 50
	'{'  shift 51
	.  error


state 9
	declaration:  ENUM.ID ';' 
	type_specifier:  ENUM.ID 
	enum_declaration:  ENUM.'{' enum_list '}' ';' 
	enum_declaration:  ENUM.ID '{' enum_list '}' ';' 

	ID  shift 52
	'{'  shift 53
	.  error


state 10
	declaration:  struct_declaration.    (12)

	.  reduce 12 (src line 122)


state 11
	declaration:  union_declaration.    (13)

	.  reduce 13 (src line 123)


state 12
	declaration:  enum_declaration.    (14)

	.  reduce 14 (src line 124)


state 13
	declaration:  typedef_declaration.    (15)

	.  reduce 15 (src line 125)


state 14
	declaration:  ASM_KW.'(' args ')' ';' 
	declaration:  ASM_KW.';' 

	';'  shift 55
	'('  shift 54
	.  error


state 15
	declaration:  STATIC_ASSERT.'(' const_int_expr ',' STRING_LIT ')' ';' 
	declaration:  STATIC_ASSERT.'(' const_int_expr ')' ';' 

	'('  shift 56
	.  error


state 16
	declaration:  declaration_specifiers.gd_fun_declarator compound_stmt 
	declaration:  declaration_specifiers.gd_fun_declarator ';' 
	declaration:  declaration_specifiers.gd_fun_declarator ',' gd_fun_declarator ';' 
	declaration:  declaration_specifiers.ATTR_WEAK gd_fun_declarator compound_stmt 
	declaration:  declaration_specifiers.ATTR_WEAK gd_fun_declarator ';' 
	declaration:  declaration_specifiers.gd_fun_declarator ATTR_WEAK compound_stmt 
	declaration:  declaration_specifiers.gd_fun_declarator ATTR_WEAK ';' 
	declaration:  declaration_specifiers.gd_fun_declarator ATTR_SECTION ';' 
	declaration:  declaration_specifiers.gd_fun_declarator ATTR_ALIGNED ';' 
	declaration:  declaration_specifiers.ATTR_SECTION gd_init_declarator_list ';' 
	declaration:  declaration_specifiers.ATTR_SECTION gd_fun_declarator compound_stmt 
	declaration:  declaration_specifiers.ATTR_SECTION gd_fun_declarator ';' 
	declaration:  declaration_specifiers.ATTR_ALIGNED gd_init_declarator_list ';' 
	declaration:  declaration_specifiers.gd_fun_declarator ATTR_ALIAS ';' 
	declaration:  declaration_specifiers.gd_init_declarator_list ATTR_ALIAS ';' 
	declaration:  declaration_specifiers.'(' '*' ID '[' ']' ')' '(' fp_param_types ')' ';' 
	declaration:  declaration_specifiers.'(' '*' ID '[' ']' ')' '(' fp_param_types ')' ATTR_WEAK ';' 
	var_declaration:  declaration_specifiers.gd_init_declarator_list ';' 
	declaration_specifiers:  declaration_specifiers.INLINE_KW 

	ID  shift 64
	ATTR_WEAK  shift 58
	ATTR_ALIGNED  shift 60
	ATTR_SECTION  shift 59
	INLINE_KW  shift 63
	'('  shift 62
	'*'  shift 67
	.  error

	gd_declarator  goto 68
	gd_init_declarator  goto 66
	gd_init_declarator_list  goto 61
	gd_pointer  goto 65
	gd_fun_declarator  goto 57

state 17
	declaration:  ATTR_WEAK.declaration_specifiers gd_fun_declarator compound_stmt 
	declaration:  ATTR_WEAK.declaration_specifiers gd_fun_declarator ';' 
	declaration:  ATTR_WEAK.declaration_specifiers gd_init_declarator_list ';' 

	INT  shift 26
	VOID  shift 27
	CONST  shift 25
	CHAR  shift 28
	EXTERN  shift 23
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 42
	ENUM  shift 44
	UNION  shift 43
	STATIC  shift 22
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	INLINE_KW  shift 24
	TYPENAME  shift 36
	.  error

	type_specifier  goto 21
	declaration_specifiers  goto 69

state 18
	declaration:  ATTR_SECTION.declaration_specifiers gd_fun_declarator compound_stmt 
	declaration:  ATTR_SECTION.declaration_specifiers gd_fun_declarator ';' 
	declaration:  ATTR_SECTION.declaration_specifiers gd_init_declarator_list ';' 

	INT  shift 26
	VOID  shift 27
	CONST  shift 25
	CHAR  shift 28
	EXTERN  shift 23
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 42
	ENUM  shift 44
	UNION  shift 43
	STATIC  shift 22
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	INLINE_KW  shift 24
	TYPENAME  shift 36
	.  error

	type_specifier  goto 21
	declaration_specifiers  goto 70

state 19
	declaration:  ATTR_ALIGNED.declaration_specifiers gd_fun_declarator compound_stmt 
	declaration:  ATTR_ALIGNED.declaration_specifiers gd_fun_declarator ';' 
	declaration:  ATTR_ALIGNED.declaration_specifiers gd_init_declarator_list ';' 

	INT  shift 26
	VOID  shift 27
	CONST  shift 25
	CHAR  shift 28
	EXTERN  shift 23
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 42
	ENUM  shift 44
	UNION  shift 43
	STATIC  shift 22
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	INLINE_KW  shift 24
	TYPENAME  shift 36
	.  error

	type_specifier  goto 21
	declaration_specifiers  goto 71

state 20
	typedef_declaration:  TYPEDEF.type_specifier ID ';' 
	typedef_declaration:  TYPEDEF.type_specifier TYPENAME ';' 
	typedef_declaration:  TYPEDEF.type_specifier '*' ID ';' 
	typedef_declaration:  TYPEDEF.type_specifier '*' TYPENAME ';' 
	typedef_declaration:  TYPEDEF.type_specifier '*' '*' ID ';' 
	typedef_declaration:  TYPEDEF.type_specifier '*' '*' TYPENAME ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier ID ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier TYPENAME ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier '*' ID ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier '*' TYPENAME ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier '*' '*' ID ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier '*' '*' TYPENAME ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID TYPENAME ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID '*' ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID '*' TYPENAME ';' 
	typedef_declaration:  TYPEDEF.ID ID ';' 
	typedef_declaration:  TYPEDEF.ID TYPENAME ';' 
	typedef_declaration:  TYPEDEF.ID '*' ID ';' 
	typedef_declaration:  TYPEDEF.type_specifier '(' '*' ID ')' '(' fp_param_types ')' ';' 
	typedef_declaration:  TYPEDEF.type_specifier '(' ID ')' '(' fp_param_types ')' ';' 
	typedef_declaration:  TYPEDEF.type_specifier '*' '(' '*' ID ')' '(' fp_param_types ')' ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier '*' '(' '*' ID ')' '(' fp_param_types ')' ';' 
	typedef_declaration:  TYPEDEF.CONST type_specifier '(' '*' ID ')' '(' fp_param_types ')' ';' 
	typedef_declaration:  TYPEDEF.type_specifier ID '(' fp_param_types ')' ';' 
	typedef_declaration:  TYPEDEF.STRUCT '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT '{' field_list '}' ID '[' const_int_expr ']' ';' 
	typedef_declaration:  TYPEDEF.STRUCT ATTR_PACKED '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT '{' field_list '}' ATTR_PACKED ID ';' 
	typedef_declaration:  TYPEDEF.UNION '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.UNION ATTR_PACKED '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.UNION '{' field_list '}' ATTR_PACKED ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT ATTR_PACKED ID '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID ATTR_PACKED '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID '{' field_list '}' ATTR_PACKED ID ';' 
	typedef_declaration:  TYPEDEF.UNION ID '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.UNION ATTR_PACKED ID '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.UNION ID ATTR_PACKED '{' field_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.UNION ID '{' field_list '}' ATTR_PACKED ID ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID '{' field_list '}' ';' 
	typedef_declaration:  TYPEDEF.STRUCT ATTR_PACKED ID '{' field_list '}' ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID ATTR_PACKED '{' field_list '}' ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID '{' field_list '}' ATTR_PACKED ';' 
	typedef_declaration:  TYPEDEF.UNION ID '{' field_list '}' ';' 
	typedef_declaration:  TYPEDEF.UNION ATTR_PACKED ID '{' field_list '}' ';' 
	typedef_declaration:  TYPEDEF.UNION ID ATTR_PACKED '{' field_list '}' ';' 
	typedef_declaration:  TYPEDEF.UNION ID '{' field_list '}' ATTR_PACKED ';' 
	typedef_declaration:  TYPEDEF.ENUM ID '{' enum_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.ENUM '{' enum_list '}' ID ';' 
	typedef_declaration:  TYPEDEF.type_specifier ID '[' const_int_expr ']' ';' 
	typedef_declaration:  TYPEDEF.type_specifier TYPENAME '[' const_int_expr ']' ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID ID '[' const_int_expr ']' ';' 
	typedef_declaration:  TYPEDEF.STRUCT ID TYPENAME '[' const_int_expr ']' ';' 

	ID  shift 75
	INT  shift 26
	VOID  shift 27
	CONST  shift 73
	CHAR  shift 28
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 74
	ENUM  shift 77
	UNION  shift 76
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	TYPENAME  shift 36
	.  error

	type_specifier  goto 72

state 21
	declaration_specifiers:  type_specifier.    (708)

	.  reduce 708 (src line 2043)


state 22
	declaration_specifiers:  STATIC.type_specifier 
	declaration_specifiers:  STATIC.CONST type_specifier 
	declaration_specifiers:  STATIC.INLINE_KW type_specifier 
	declaration_specifiers:  STATIC.INLINE_KW CONST type_specifier 
	declaration_specifiers:  STATIC.STRUCT ID '{' field_list '}' 
	declaration_specifiers:  STATIC.STRUCT ATTR_PACKED ID '{' field_list '}' 
	declaration_specifiers:  STATIC.STRUCT ID '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  STATIC.CONST STRUCT ID '{' field_list '}' 
	declaration_specifiers:  STATIC.CONST STRUCT ATTR_PACKED ID '{' field_list '}' 
	declaration_specifiers:  STATIC.CONST STRUCT ID '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  STATIC.STRUCT '{' field_list '}' 
	declaration_specifiers:  STATIC.STRUCT ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  STATIC.STRUCT '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  STATIC.CONST STRUCT '{' field_list '}' 
	declaration_specifiers:  STATIC.CONST STRUCT ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  STATIC.CONST STRUCT '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  STATIC.UNION '{' field_list '}' 
	declaration_specifiers:  STATIC.CONST UNION '{' field_list '}' 

	INT  shift 26
	VOID  shift 27
	CONST  shift 79
	CHAR  shift 28
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 81
	ENUM  shift 44
	UNION  shift 82
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	INLINE_KW  shift 80
	TYPENAME  shift 36
	.  error

	type_specifier  goto 78

state 23
	declaration_specifiers:  EXTERN.type_specifier 
	declaration_specifiers:  EXTERN.CONST type_specifier 
	declaration_specifiers:  EXTERN.INLINE_KW type_specifier 
	declaration_specifiers:  EXTERN.INLINE_KW CONST type_specifier 
	declaration_specifiers:  EXTERN.STRUCT ID '{' field_list '}' 
	declaration_specifiers:  EXTERN.STRUCT ATTR_PACKED ID '{' field_list '}' 
	declaration_specifiers:  EXTERN.STRUCT ID '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  EXTERN.CONST STRUCT ID '{' field_list '}' 
	declaration_specifiers:  EXTERN.CONST STRUCT ATTR_PACKED ID '{' field_list '}' 
	declaration_specifiers:  EXTERN.CONST STRUCT ID '{' field_list '}' ATTR_PACKED 

	INT  shift 26
	VOID  shift 27
	CONST  shift 84
	CHAR  shift 28
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 86
	ENUM  shift 44
	UNION  shift 87
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	INLINE_KW  shift 85
	TYPENAME  shift 36
	.  error

	type_specifier  goto 83

state 24
	declaration_specifiers:  INLINE_KW.type_specifier 
	declaration_specifiers:  INLINE_KW.STATIC type_specifier 
	declaration_specifiers:  INLINE_KW.EXTERN type_specifier 
	declaration_specifiers:  INLINE_KW.CONST type_specifier 
	declaration_specifiers:  INLINE_KW.STATIC CONST type_specifier 

	INT  shift 26
	VOID  shift 27
	CONST  shift 91
	CHAR  shift 28
	EXTERN  shift 90
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 92
	ENUM  shift 44
	UNION  shift 87
	STATIC  shift 89
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	TYPENAME  shift 36
	.  error

	type_specifier  goto 88

state 25
	declaration_specifiers:  CONST.type_specifier 
	declaration_specifiers:  CONST.STRUCT ID '{' field_list '}' 
	declaration_specifiers:  CONST.STRUCT ATTR_PACKED ID '{' field_list '}' 
	declaration_specifiers:  CONST.STRUCT ID '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  CONST.STRUCT '{' field_list '}' 
	declaration_specifiers:  CONST.STRUCT ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  CONST.STRUCT '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  CONST.UNION '{' field_list '}' 

	INT  shift 26
	VOID  shift 27
	CHAR  shift 28
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 94
	ENUM  shift 44
	UNION  shift 95
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	TYPENAME  shift 36
	.  error

	type_specifier  goto 93

state 26
	type_specifier:  INT.    (60)

	.  reduce 60 (src line 273)


state 27
	type_specifier:  VOID.    (61)

	.  reduce 61 (src line 275)


state 28
	type_specifier:  CHAR.    (62)

	.  reduce 62 (src line 276)


state 29
	type_specifier:  LONG.    (63)
	type_specifier:  LONG.LONG 
	type_specifier:  LONG.INT 
	type_specifier:  LONG.LONG INT 
	type_specifier:  LONG.UNSIGNED 
	type_specifier:  LONG.UNSIGNED INT 
	type_specifier:  LONG.LONG UNSIGNED 
	type_specifier:  LONG.LONG UNSIGNED INT 
	type_specifier:  LONG.SIGNED 
	type_specifier:  LONG.SIGNED INT 
	type_specifier:  LONG.LONG SIGNED 
	type_specifier:  LONG.LONG SIGNED INT 
	type_specifier:  LONG.DOUBLE 

	INT  shift 97
	LONG  shift 96
	UNSIGNED  shift 98
	DOUBLE  shift 100
	SIGNED  shift 99
	.  reduce 63 (src line 277)


state 30
	type_specifier:  SHORT.    (67)
	type_specifier:  SHORT.INT 
	type_specifier:  SHORT.UNSIGNED 
	type_specifier:  SHORT.UNSIGNED INT 

	INT  shift 101
	UNSIGNED  shift 102
	.  reduce 67 (src line 281)


state 31
	type_specifier:  UNSIGNED.    (69)
	type_specifier:  UNSIGNED.INT 
	type_specifier:  UNSIGNED.LONG 
	type_specifier:  UNSIGNED.LONG LONG 
	type_specifier:  UNSIGNED.LONG INT 
	type_specifier:  UNSIGNED.LONG LONG INT 
	type_specifier:  UNSIGNED.CHAR 
	type_specifier:  UNSIGNED.SHORT 
	type_specifier:  UNSIGNED.SHORT INT 
	type_specifier:  UNSIGNED.INT128 

	INT  shift 103
	CHAR  shift 105
	LONG  shift 104
	SHORT  shift 106
	INT128  shift 107
	.  reduce 69 (src line 283)


state 32
	type_specifier:  FLOAT.    (88)

	.  reduce 88 (src line 302)


state 33
	type_specifier:  DOUBLE.    (89)

	.  reduce 89 (src line 303)


state 34
	type_specifier:  SIGNED.    (91)
	type_specifier:  SIGNED.INT 
	type_specifier:  SIGNED.CHAR 
	type_specifier:  SIGNED.SHORT 
	type_specifier:  SIGNED.SHORT INT 
	type_specifier:  SIGNED.LONG 
	type_specifier:  SIGNED.LONG INT 
	type_specifier:  SIGNED.LONG LONG 
	type_specifier:  SIGNED.LONG LONG INT 
	type_specifier:  SIGNED.INT128 

	INT  shift 108
	CHAR  shift 109
	LONG  shift 111
	SHORT  shift 110
	INT128  shift 112
	.  reduce 91 (src line 305)


state 35
	type_specifier:  INT128.    (100)
	type_specifier:  INT128.UNSIGNED 

	UNSIGNED  shift 113
	.  reduce 100 (src line 314)


state 36
	type_specifier:  TYPENAME.    (104)

	.  reduce 104 (src line 318)


state 37
	type_specifier:  TYPEOF.'(' expression ')' 
	type_specifier:  TYPEOF.'(' type_specifier ')' 
	type_specifier:  TYPEOF.'(' STRUCT ID ')' 

	'('  shift 114
	.  error


state 38
	declaration_list:  declaration_list declaration.    (3)

	.  reduce 3 (src line 102)


state 39
	declaration_list:  declaration_list ';'.    (4)

	.  reduce 4 (src line 105)


state 40
	declaration:  ALIGNAS_SPEC var_declaration.    (8)

	.  reduce 8 (src line 116)


state 41
	var_declaration:  declaration_specifiers.gd_init_declarator_list ';' 
	declaration_specifiers:  declaration_specifiers.INLINE_KW 

	ID  shift 116
	INLINE_KW  shift 63
	'('  shift 118
	'*'  shift 67
	.  error

	gd_declarator  goto 68
	gd_init_declarator  goto 66
	gd_init_declarator_list  goto 115
	gd_pointer  goto 117

state 42
	type_specifier:  STRUCT.ID 
	declaration_specifiers:  STRUCT.ID '{' field_list '}' 
	declaration_specifiers:  STRUCT.ATTR_PACKED ID '{' field_list '}' 
	declaration_specifiers:  STRUCT.ID ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  STRUCT.ID '{' field_list '}' ATTR_PACKED 
	declaration_specifiers:  STRUCT.'{' field_list '}' 
	declaration_specifiers:  STRUCT.ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  STRUCT.'{' field_list '}' ATTR_PACKED 

	ID  shift 119
	ATTR_PACKED  shift 120
	'{'  shift 48
	.  error


state 43
	type_specifier:  UNION.ID 
	declaration_specifiers:  UNION.'{' field_list '}' 
	declaration_specifiers:  UNION.ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  UNION.'{' field_list '}' ATTR_PACKED 

	ID  shift 121
	ATTR_PACKED  shift 122
	'{'  shift 51
	.  error


state 44
	type_specifier:  ENUM.ID 

	ID  shift 123
	.  error


45: shift/reduce conflict (shift 127(0), red'n 108(0)) on ATTR_ALIGNED
state 45
	declaration:  STRUCT ID.';' 
	type_specifier:  STRUCT ID.    (108)
	struct_declaration:  STRUCT ID.'{' field_list '}' ';' 
	struct_declaration:  STRUCT ID.ATTR_PACKED '{' field_list '}' ';' 
	struct_declaration:  STRUCT ID.'{' field_list '}' ATTR_PACKED ';' 
	struct_declaration:  STRUCT ID.ATTR_ALIGNED '{' field_list '}' ';' 
	declaration_specifiers:  STRUCT ID.'{' field_list '}' 
	declaration_specifiers:  STRUCT ID.ATTR_PACKED '{' field_list '}' 
	declaration_specifiers:  STRUCT ID.'{' field_list '}' ATTR_PACKED 

	ATTR_PACKED  shift 126
	ATTR_ALIGNED  shift 127
	';'  shift 124
	'{'  shift 125
	.  reduce 108 (src line 326)


state 46
	struct_declaration:  STRUCT ATTR_PACKED.ID '{' field_list '}' ';' 
	declaration_specifiers:  STRUCT ATTR_PACKED.ID '{' field_list '}' 
	declaration_specifiers:  STRUCT ATTR_PACKED.'{' field_list '}' 

	ID  shift 128
	'{'  shift 129
	.  error


state 47
	struct_declaration:  STRUCT ATTR_ALIGNED.ID '{' field_list '}' ';' 

	ID  shift 130
	.  error


state 48
	declaration_specifiers:  STRUCT '{'.field_list '}' 
	declaration_specifiers:  STRUCT '{'.field_list '}' ATTR_PACKED 

	INT  shift 26
	VOID  shift 27
	CONST  shift 137
	CHAR  shift 28
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 136
	ENUM  shift 44
	UNION  shift 138
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	ALIGNAS_SPEC  shift 135
	STATIC_ASSERT  shift 133
	TYPENAME  shift 36
	.  error

	field_list  goto 131
	field  goto 132
	type_specifier  goto 134

state 49
	declaration:  UNION ID.';' 
	type_specifier:  UNION ID.    (109)
	union_declaration:  UNION ID.'{' field_list '}' ';' 
	union_declaration:  UNION ID.ATTR_PACKED '{' field_list '}' ';' 
	union_declaration:  UNION ID.'{' field_list '}' ATTR_PACKED ';' 

	ATTR_PACKED  shift 141
	';'  shift 139
	'{'  shift 140
	.  reduce 109 (src line 328)


state 50
	union_declaration:  UNION ATTR_PACKED.ID '{' field_list '}' ';' 
	declaration_specifiers:  UNION ATTR_PACKED.'{' field_list '}' 

	ID  shift 142
	'{'  shift 143
	.  error


state 51
	declaration_specifiers:  UNION '{'.field_list '}' 
	declaration_specifiers:  UNION '{'.field_list '}' ATTR_PACKED 

	INT  shift 26
	VOID  shift 27
	CONST  shift 137
	CHAR  shift 28
	LONG  shift 29
	UNSIGNED  shift 31
	SHORT  shift 30
	FLOAT  shift 32
	DOUBLE  shift 33
	STRUCT  shift 136
	ENUM  shift 44
	UNION  shift 138
	TYPEOF  shift 37
	INT128  shift 35
	SIGNED  shift 34
	ALIGNAS_SPEC  shift 135
	STATIC_ASSERT  shift 133
	TYPENAME  shift 36
	.  error

	field_list  goto 144
	field  goto 132
	type_specifier  goto 134

state 52
	declaration:  ENUM ID.';' 
	type_specifier:  ENUM ID.    (110)
	enum_declaration:  ENUM ID.'{' enum_list '}' ';' 

	';'  shift 145
	'{'  shift 146
	.  reduce 110 (src line 330)


state 53
	enum_declaration:  ENUM '{'.enum_list '}' ';' 

	ID  shift 149
	.  error

	enum_list  goto 147
	enum_member  goto 148

state 54
	declaration:  ASM_KW '('.args ')' ';' 
	args: .    (449)

	NUM  shift 168
	CHAR_LIT  shift 170
	FNUM  shift 169
	ID  shift 161
	STRING_LIT  shift 159
	SIZEOF  shift 178
	VA_ARG  shift 181
	ALIGNOF  shift 179
	GENERIC  shift 180
	INC  shift 174
	DEC  shift 175
	ANDAND  shift 177
	'('  shift 154
	'*'  shift 155
	'&'  shift 176
	'-'  shift 171
	'!'  shift 172
	'~'  shift 173
	.  reduce 449 (src line 1293)

	postfix_expr  goto 153
	expression  goto 152
	var  goto 157
	simple_expression  goto 156
	ternary_expression  goto 160
	logical_expression  goto 162
	comparison_expression  goto 163
	bitwise_expression  goto 164
	additive_expression  goto 165
	term  goto 166
	factor  goto 167
	call  goto 158
	args  goto 150
	arg_list  goto 151

state 55
	declaration:  ASM_KW ';'.    (17)

	.  reduce 17 (src line 128)


state 56
	declaration:  STATIC_ASSERT '('.const_int_expr ',' STRING_LIT ')' ';' 
	declaration:  STATIC_ASSERT '('.const_int_expr ')' ';' 

	NUM  shift 194
	ID  shift 198
	SIZEOF  shift 196
	ALIGNOF  shift 197
	'('  shift 195
	'&'  shift 199
	'-'  shift 192
	'!'  shift 193
	.  error

	const_int_expr  goto 182
	const_int_ternary  goto 183
	const_int_or  goto 184
	const_int_and  goto 185
	const_int_cmp  goto 186
	const_int_shift  goto 187
	const_int_add  goto 188
	const_int_mul  goto 189
	const_int_unary  goto 190
	const_int_primary  goto 191

state 57
	declaration:  declaration_specifiers gd_fun_declarator.compound_stmt 
	declaration:  declaration_specifiers gd_fun_declarator.';' 
	declaration:  declaration_specifiers gd_fun_declarator.',' gd_fun_declarator ';' 
	declaration:  declaration_specifiers gd_fun_declarator.ATTR_WEAK compound_stmt 
	declaration:  declaration_specifiers gd_fun_declarator.ATTR_WEAK ';' 
	declaration:  declaration_specifiers gd_fun_declarator.ATTR_SECTION ';' 
	declaration:  declaration_specifiers gd_fun_declarator.ATTR_ALIGNED ';' 
	declaration:  declaration_specifiers gd_fun_declarator.ATTR_ALIAS ';' 
